--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon src/index.js",
     "migrate": "npx sequelize-cli db:migrate",
     "add-migration": "npx sequelize-cli migration:generate --name",
-    "add-seeders": "npx sequelize-cli db:seed:all",
+    "seed": "npx sequelize-cli db:seed:all",
     "undo-seeders": "npx sequelize-cli db:seed:undo:all",
     "docker:down": "docker compose down -v",
     "docker:up": "docker compose up -d"
