Tests added and a few other tweaks

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "IS_TEST=true mocha \"./src/**/*.test.js\"",
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "migrate": "npx sequelize-cli db:migrate",
@@ -29,7 +29,10 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "sinon": "^15.0.1"
   }
 }
